# template_c_cpp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
